--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    padding-top: 60px;
+    padding-bottom: 70px
+}
+
+footer {
+    width: 100%;
+    height: 35px;
+    line-height: 40px;
+    background-color: #b5b5b5;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
